tests/transpiler/x/zig/list_nested_assign.zig
// Generated by Mochi Zig transpiler on 2025-07-20 03:39 +0000
const std = @import("std");

pub fn main() void {
    var matrix = [_]i64{[_]i64{1, 2}, [_]i64{3, 4}};
    matrix[1][0] = 5;
    std.debug.print("{any}\n", .{matrix[1][0]});
}
